--- a/chat-front-end/package.json
+++ b/chat-front-end/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "antd": "^5.16.4",
+    "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
