--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "start-prod": "node ./bin/www"
+    "start": "NODE_ENV=development nodemon ./bin/www",
+    "start-prod": "NODE_ENV=production node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
