--- a/chat-front-end/package.json
+++ b/chat-front-end/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.16.4",
     "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
